--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,39 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.home_banner{
+  background-image: url('./assets/img/banner-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+/* Patrón de fondo para la página */
+.home_section{  
+  background-image: url('./assets/img/banner-s-bg.png');
+  background-repeat: repeat;
+  background-size: cover;
+  backdrop-filter: blur(5px);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.banner_tittle_1{
+  font-size: 100px;  
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.banner_tittle_2{
+  font-size: 90px;  
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.banner_tittle_3{
+  font-size: 110px;  
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/* === Mobile First === */
+@media (max-width: 768px) {
+  .banner_tittle_1{
+    font-size: 80px;  
   }
-  to {
-    transform: rotate(360deg);
+  .banner_tittle_2{
+    font-size: 60px;  
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .banner_tittle_3{
+    font-size: 90px;  
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
